@@ -27,9 +27,11 @@ import com.google.api.services.directory.model.Member;
 import com.google.common.base.Preconditions;
 import com.google.solutions.jitaccess.cel.TemporaryIamCondition;
 import com.google.solutions.jitaccess.core.*;
+import com.google.solutions.jitaccess.core.auth.UserEmail;
 import com.google.solutions.jitaccess.core.catalog.ActivationType;
 import com.google.solutions.jitaccess.core.catalog.RequesterPrivilege;
 import com.google.solutions.jitaccess.core.catalog.RequesterPrivilegeSet;
+import com.google.solutions.jitaccess.core.catalog.ProjectId;
 import com.google.solutions.jitaccess.core.clients.AssetInventoryClient;
 import com.google.solutions.jitaccess.core.clients.DirectoryGroupsClient;
 import dev.cel.common.CelException;
@@ -75,22 +77,6 @@ public class AssetInventoryRepository extends ProjectRoleRepository {
     this.options = options;
   }
 
-  static <T> T awaitAndRethrow(@NotNull CompletableFuture<T> future) throws AccessException, IOException {
-    try {
-      return future.get();
-    } catch (InterruptedException | ExecutionException e) {
-      if (e.getCause() instanceof AccessException) {
-        throw (AccessException) e.getCause().fillInStackTrace();
-      }
-
-      if (e.getCause() instanceof IOException) {
-        throw (IOException) e.getCause().fillInStackTrace();
-      }
-
-      throw new IOException("Awaiting executor tasks failed", e);
-    }
-  }
-
   @NotNull
   List<Binding> findProjectBindings(
       @NotNull UserEmail user,
@@ -112,8 +98,10 @@ public class AssetInventoryRepository extends ProjectRoleRepository {
             projectId),
         this.executor);
 
-    var principalSetForUser = new PrincipalSet(user, awaitAndRethrow(listMembershipsFuture));
-    var allBindings = awaitAndRethrow(effectivePoliciesFuture)
+    var principalSetForUser = new PrincipalSet(
+        user,
+        ThrowingCompletableFuture.awaitAndRethrow(listMembershipsFuture));
+    return ThrowingCompletableFuture.awaitAndRethrow(effectivePoliciesFuture)
         .stream()
 
         // All bindings, across all resources in the ancestry.
@@ -122,7 +110,6 @@ public class AssetInventoryRepository extends ProjectRoleRepository {
         // Only bindings that apply to the user.
         .filter(binding -> principalSetForUser.isMember(binding))
         .collect(Collectors.toList());
-    return allBindings;
   }
 
   // ---------------------------------------------------------------------------
@@ -260,10 +247,9 @@ public class AssetInventoryRepository extends ProjectRoleRepository {
     var allMembers = new HashSet<>(allUserMembers);
 
     for (var listMembersFuture : listMembersFutures) {
-      var members = awaitAndRethrow(listMembersFuture)
+      var members = ThrowingCompletableFuture.awaitAndRethrow(listMembersFuture)
           .stream()
-          .map(m -> new UserEmail(m.getEmail()))
-          .collect(Collectors.toList());
+          .map(m -> new UserEmail(m.getEmail())).toList();
       allMembers.addAll(members);
     }
 
